# python_web_HW_2

./: Dockerfile  pyproject.toml  requirements.txt
