[tool.poetry]
name = "python-web-hw-2"
version = "0.1.0"
description = ""
authors = ["olgapasichnyuk <olgapasichnyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_hw_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
